Fixed modal z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -306,6 +306,7 @@
     height: auto;
     top: 50%;
     left: 50%;
+    z-index: 999;
     transform: translate(-50%, -50%);
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
@@ -316,6 +317,7 @@
 
  .modal {
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   width: 100%;
